Update .gitignore to include additional files and IDE configuration
Took 9 minutes

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ porkershell
 /.idea/.gitignore
 /.idea/copilot.data.migration.ask.xml
 /.idea/copilot.data.migration.edit.xml
+/CLAUDE.md
+/.claude/
+/.agents/
